fix syntax error, add role for small screen visibility

--- a/FTYA3/style.css
+++ b/FTYA3/style.css
@@ -1,45 +1,49 @@
-*{
-    border-radius: 20px;
+* {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;  
+    font-family: "Poppins", sans-serif;
 }
-.header{
+
+.header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0,7),rgba(4,9,30,0.7)),url(fty.3.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(fty.3.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
 }
-nav{
+
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
 }
-nav img{
-    width: 150px;
 
+nav img {
+    width: 150px;
 }
-.nav-links{
+
+.nav-links {
     flex: 1;
     text-align: right;
-
 }
-.nav-links ul li{
+
+.nav-links ul li {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
-.nav-links ul li a{
-    color:  ;
+
+.nav-links ul li a {
+    color: black; /* Add a color */
     text-decoration: none;
     font-size: 13px;
 }
-.nav-links ul li::after{
-    content: ;
+
+.nav-links ul li::after {
+    content: "";
     width: 0px;
     height: 2px;
     background: #f44336;
@@ -47,27 +51,32 @@ nav img{
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li :hover::after{
+
+.nav-links ul li:hover::after {
     width: 100%;
 }
-.text-box{
+
+.text-box {
     width: 90%;
     color: rgb(0, 179, 255);
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
-.text-box h1{
+
+.text-box h1 {
     font-size: 62px;
 }
-.text-box P{
+
+.text-box p {
     margin: 10px 0 40px;
     font-size: 14px;
     color: red;
 }
-hero-btn{
+
+.hero-btn {
     display: inline-block;
     text-decoration: none;
     color: aqua;
@@ -78,19 +87,22 @@ hero-btn{
     position: relative;
     cursor: pointer;
 }
-.hero-btn:hover{
+
+.hero-btn:hover {
     border: 1px solid #f44336;
     transition: 1s;
 }
-@media (max-width: 700px){
-   .text-box h1{
-    font-size: 20px;
 
+@media (max-width: 700px) {
+    .text-box h1 {
+        font-size: 20px;
     }
-    .nav-links ul li{
+
+    .nav-links ul li {
         display: block;
     }
-    .nav-links{
+
+    .nav-links {
         position: absolute;
         background: blue;
         height: 100px;
@@ -101,85 +113,97 @@ hero-btn{
         z-index: 2;
         transition: 1s;
     }
-    nav .fa{
+
+    nav .fa {
         display: block;
         color: black;
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
-
     }
-    .nav-links ul{
+
+    .nav-links ul {
         padding: 30px;
     }
 }
-/*------- course ------*/
 
-.course{
+/* Course */
+
+.course {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
 }
-h1{
+
+h1 {
     font-size: 36px;
     font-weight: 600;
 }
-p{
+
+p {
     color: red;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
-
 }
- .row{
+
+.row {
     margin-top: 5%;
     display: flex;
     justify-content: space-between;
 }
-.course-col{
+
+.course-col {
     flex-basis: 31%;
     background: rgb(229, 255, 0);
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
     box-sizing: border-box;
-    transition: 5s;
+    transition: 0.5s; /* Change the time to 0.5s */
 }
-h3{
+
+h3 {
     text-align: center;
     font-weight: 600;
     margin: 10px 0;
 }
-.course-col:hover{
-    box-shadow: 0 0 20px 0px rgba(,0,0,0,0.2);
+
+.course-col:hover {
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2); /* Fix rgba values */
 }
-@media(max-width: 700px){
-    .row{
-        -me-flex-direction: column;
+
+@media (max-width: 700px) {
+    .row {
+        flex-direction: column; /* Fix typo */
     }
 }
 
-/*------- campus ----*/
-.campus{
+/* Campus */
+
+.campus {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
 }
-.campus-col{
+
+.campus-col {
     flex-basis: 32%;
-    border-radius: 10PX;
-    margin-bottom: 30PX;
+    border-radius: 10px;
+    margin-bottom: 30px;
     position: relative;
     overflow: hidden;
 }
-.campus-col img{
+
+.campus-col img {
     width: 100%;
     display: block;
 }
-.layer{
+
+.layer {
     background: transparent;
     height: 100%;
     width: 100%;
@@ -188,10 +212,12 @@ h3{
     left: 0;
     transition: 0.5s;
 }
-.layer:hover{
+
+.layer:hover {
     background: lightcoral;
 }
-.layer h3{
+
+.layer h3 {
     width: 100%;
     font-weight: 500;
     color: #fff;
@@ -203,73 +229,72 @@ h3{
     opacity: 0;
     transition: 0.5s;
 }
-.layer:hover h3{
+
+.layer:hover h3 {
     bottom: 49%;
     opacity: 1;
 }
 
-/*--------- facilities ----------*/
+/* Facilities */
 
-.facilities{
+.facilities {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
-
 }
-.facilities-col{
+
+.facilities-col {
     flex-basis: 31%;
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
 }
-.facilities-col img{
+
+.facilities-col img {
     width: 100%;
     border-radius: 10px;
 }
-.facilities-col p{
-    padding: 0;
-}
-.facilities-col h3{
-    margin-top: 16px;
-    margin-top: 15px;
+
+
+.facilities-col h3 {
+    margin-top: 16px; /* Changed Second Margin-top to Margin-bottom */
+    margin-bottom: 15px;
     text-align: left;
 }
 
-/*---------- testimonial --------*/
+/* Testimonial */
 
-
-.testimonial{
+.testimonial {
     width: 80%;
     margin: auto;
-    padding-top: 100PX;
+    padding-top: 100px;
     text-align: center;
+}
 
+.testimonial-col {
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
 }
-.testimonial-col{
-flex-basis: 44%;
-border-radius: 10px;
-margin-bottom: 5%;
-text-align: left;
-background: #fff3f3;
-padding: 25px;
-cursor: pointer;
-display: flex;
-}
-.testimonial-col img{
+
+.testimonial-col img {
     height: 40px;
     margin-left: 5px;
     margin-right: 30px;
     border-radius: 50%;
-
 }
-.testimonial-col p{
+
+.testimonial-col p {
     padding: 0;
 }
 
-.testimonial-col h3{
+.testimonial-col h3 {
     margin-top: 15px;
     text-align: left;
-    
 }
-
